<resources>
    <string name="app_name">Swoosh</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="get_started">GET STARTED</string>
    <string name="find_the_team_in_your_city_and_dominate_the_league">Find the team in your city, and dominate the league.</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="todo">TODO</string>
    <string name="background_image">background image</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="wemens">Wemens</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
</resources>